resources/public/css/style.css
/* vars */
:root {
    color-scheme: light dark;

    /* common */
    --link-primary-color: #129bd8;
    --pulse-animation: pulse 2s cubic-bezier(0.4, 0, 0.6, 1) infinite;

    /* dark theme */
    --bg-primary-color: #010c12;
    --bg-secondary-color: #212e42;

    --text-primary-color: #86d2ff;
    --text-secondary-color: #ffffff;

    --button-primary-color: black;

    --error-primary-color: #f09295;

    --border-primary-color: #5f9de8;
}

:root.light {
    /* light theme */
    --bg-primary-color: #ffffff;
    --bg-secondary-color: #def1ff;

    --text-primary-color: #212e42;
    --text-secondary-color: #010c12;

    --button-primary-color: white;

    --error-primary-color: #991b1b;

    --border-primary-color: #00349d;
}

/* General */

* {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
}

.hidden {
    display: none;
}

.show {
    display: block;
    height: 90vh;
}

html {
    font-family: ui-sans-serif, system-ui, -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Helvetica Neue, Arial, Noto Sans, sans-serif, Apple Color Emoji, Segoe UI Emoji, Segoe UI Symbol, Noto Color Emoji;
}

body {
    min-height: 100vh;
    background-image: linear-gradient(to right, var(--bg-secondary-color) 15%, var(--bg-primary-color) 85%);
    color: var(--text-secondary-color);
}

@media(max-width: 1024px) {
    body {
        background-image: linear-gradient(to right, var(--bg-secondary-color), var(--bg-primary-color));
    }
}

header,
section,
footer {
    margin: auto;
}

h1, h2, h3, h4, h5, h6 {
    padding-bottom: 0.5rem;
    padding-top: 0.5rem;
}

@media (max-width: 1024px) {
    h1, h2, h3, h4, h5, h6 {
        text-align: center;
    }
}

h1 {
    font-size: 1.7rem;
    color: var(--text-primary-color);
    text-transform: uppercase;
}

h2 {
    font-size: 1.3rem;
    color: var(--text-secondary-color);
}

h3 {
    color: var(--text-primary-color);
}

h4 {
    color: var(--text-secondary-color);
}

h5 {
    color: var(--text-primary-color);
}

p {
    padding: 0.5rem 0rem;
}

a {
    display: inline-block;
    padding: 0.5rem 0rem;
    color: var(--link-primary-color);
}

ul {
    list-style-type: disc;
    list-style-position: inside;
}

li {
    padding-bottom: 0.5rem;
}

li a {
    padding: 0;
}

section button {
    padding: 0.5rem;
    background-color: var(--bg-primary-color);
    border-radius: 0.25rem;
    border-width: 2px;
    border-color: var(--text-primary-color);
}

img,
svg {
    display: block;
    margin: auto;
}

.container {
    width: 100%;
}

@media (min-width: 640px) {
    .container {
        max-width: 640px;
    }
}

@media (min-width: 768px) {
    .container {
        max-width: 768px;
    }
}

@media (min-width: 1024px) {
    .container {
        max-width: 1024px;
    }
}

@media (min-width: 1280px) {
    .container {
        max-width: 1280px;
    }
}

@media (min-width: 1536px) {
    .container {
        max-width: 1536px;
    }
}

/* Form */

form {
    display: flex;
    align-items: flex-start;
    justify-content: center;
    width: 100%;
    text-align: center;
}

@media (max-width: 1024px) {
    form {
        display: block;
    }
}

form fieldset {
    width: 100%;
    border: none;
    margin: 0.3rem 0;
}

form legend {
    font-size: 1.3rem;
    color: var(--text-primary-color);
}

form input, textarea, select {
    min-width: 30%;
    margin: 1rem 0.5rem;
    color: var(--text-secondary-color);
    background-color: var(--bg-secondary-color);
    padding: 0.3rem;
}

form textarea {
    margin: 1rem 0rem;
    width: 100%;
    min-height: 50rem;
}

input[type=button] {
    padding: 0.5rem;
    color: var(--link-primary-color);
    text-transform: uppercase;
}

/* Animation */

@keyframes pulse {

    0%,
    100% {
        opacity: 1;
    }

    50% {
        opacity: .5;
    }
}

/* Assets */

header .menu {
    padding: 12rem;
}

header .menu a {
    display: block;
    padding: 0rem;
    margin: 0rem;
}

header .menu div img {
    filter: brightness(100%);
}

header .menu div img:hover {
    filter: brightness(100%);
}

.menu-top div .txt,
.menu-center div .txt,
.menu-bottom div .txt {
    text-transform: uppercase;
}

.menu-center {
    display: flex;
    justify-content: center;
    align-items: center;
}

.menu-center>* {
    flex-basis: 100%;
}

.menu-center .menu-left{
    justify-content: flex-end;
}

.menu-center img {
    margin: 0;
}

.menu-center .menu-mid {
    align-self: center;
    max-width: fit-content;
}

.menu-center .menu-mid a {
    cursor: pointer;
}

.menu-center .menu-left,
.menu-center .menu-mid,
.menu-center .menu-right {
    display: flex;
    align-items: center;
}

.menu-center .menu-mid img{
    width: 6rem;
    transition: transform 5s;
}

.menu-center .menu-mid:hover img {
    transform: rotate(180deg);
}

.menu-center .menu-right img {
    max-width: 12rem;
    transform: translateX(-6%);
    transition: transform 1s;
}

.menu-center .menu-right:hover img {
    transform: translateX(-3%);
}

.menu-center .menu-right .txt {
    font-size: 2rem;
    padding-left: 2rem;
}

.menu-center .menu-left img{
    max-width: 12rem;
    transform: rotate(180deg) translateX(-6%);
    transition: transform 1s;
}

.menu-center .menu-left:hover img{
    transform: rotate(180deg) translateX(-3%);
}

.menu-center .menu-left .txt {
    font-size: 2rem;
    padding-right: 2rem;
}

.menu-top {
    display: flex;
    flex-direction: column;
}

.menu-bottom {
    display: flex;
    flex-direction: column;
}

.menu-top div img {
    width: 12rem;
    transform: rotate(270deg) translateX(30%);
    transition: transform 1s;
}

.menu-top div:hover img {
    transform: rotate(270deg) translateX(33%);
}

.menu-top div .txt {
    font-size: 2rem;
    transform: translateY(-600%);
}

.menu-bottom div img {
    width: 12rem;
    transform: rotate(90deg) translateX(30%);
    transition: transform 1s;
}

.menu-bottom div:hover img {
    transform: rotate(90deg) translateX(33%);
}

.menu-bottom div .txt {
    font-size: 2rem;
    transform: translateY(600%);
}

.user-pic {
    width: 2rem;
}

@media (min-width: 1024px) {
    .user-pic {
        width: 4rem;
    }
}

.header-logo, .post-header-icon{
    width: 32px;
    height: 32px;
}

.post-icon {
    width: 22px;
    height: 22px;
}

.burger {
    fill: var(--text-primary-color);
    width: 32px;
    height: 32px;
}

svg {
    fill: var(--link-primary-color);
    width: 250px;
}

svg:hover {
    fill: var(--text-secondary-color);
}

.done, .plus {
    fill: var(--border-primary-color);
}

.close, .trash {
    fill: var(--error-primary-color);
}

/* Header */

header {
    margin: auto;
    text-align: center;
    border-bottom-style: solid;
    border-bottom-width: 1px;
    border-color: var(--border-primary-color);
}

header .top {
    padding: 1.5rem;
    display: flex;
    justify-content: space-between;
    align-items: center;
    height: 10vh;
}

.pointer {
    cursor: pointer;
}

header img:hover,
svg:hover,
a:hover {
    animation: var(--pulse-animation);
}

nav {
    display: none;
    font-size: 1.125rem;
    line-height: 1.75rem;
    color: var(--text-primary-color);
}

nav p {
    margin: 1.5rem;
    display: none;
}

nav a {
    margin: 1.5rem;
    text-decoration: none;
    color: var(--text-secondary-color);
}

@media (max-width: 1024px) {
    nav {
        padding: 0;
    }

    nav a {
        display: block;
        background-color: var(--bg-primary-color);
        margin: 0;
        padding: 1rem;
        border-style: solid;
        border-color: var(--border-primary-color);
        border-width: 1px 1px 0px 1px;
    }
}

@media (min-width: 1024px) {
    nav {
        display: flex;
        justify-content: space-evenly;
    }

    nav p,
    nav a {
        display: inline-block;
    }
}

nav a:hover {
    color: var(--link-primary-color);
}

nav .active {
    color: var(--border-primary-color);
}

header .nav-btn {
    display: block;
    background-color: inherit;
    border: none;
    cursor: pointer;
}

header .nav-btn img {
    width: 4rem;
}

/* Footer */

footer {
    padding: 1.5rem;
    text-align: center;
}

@media (min-width: 1024px) {
    footer {
        display: flex;
        justify-content: space-evenly;
    }
}

footer div {
    margin: 2.5rem;
}

footer p {
    padding: 0.2rem;
}

/* Page - all pages */

section .post {
    padding: 2.5rem;
    border-bottom-style: solid;
    border-bottom-width: 1px;
    border-bottom-color: var(--border-primary-color);
}

@media (max-width: 1024px) {
    section .post {
        padding: 0.5rem;
    }
}

section .post:nth-of-type(odd) {
    background-color: var(--bg-secondary-color);
    border-right-width: 1px;
    border-right-color: var(--border-primary-color);
    border-right-style: solid;
}

section .post:nth-of-type(even) {
    background-color: var(--bg-primary-color);
    border-left-width: 1px;
    border-left-color: var(--border-primary-color);
    border-left-style: solid;
}

section .post .post-body {
    display: flex;
    justify-content: space-evenly;
    align-items: center;
}

section .post:nth-of-type(odd)>.post-body {
    flex-direction: row;
}

section .post:nth-of-type(even)>.post-body {
    flex-direction: row-reverse;
}

section .post-body>div {
    padding: 1.5rem;
}

@media (max-width: 1024px) {
    section .post-body>div {
        padding: 0.5rem;
    }
}

section .post-body>.image {
    width: 25%;
}

section .post-body>.text {
    width: 50%;
}

section .post-body>.textonly {
    width: 100%;
}

section .image>img {
    max-width: 50%;
}

@media (max-width: 1024px) {
    section .post .post-body {
        padding: 0.5rem;
        display: block;
    }
    section .post .post-body>.image, section .post-body>.text {
        width: 100%;
        margin: auto;
        padding: 0.5rem;
    }
}

.post-body:hover img {
    animation: var(--pulse-animation);
}

section button {
    margin: 0.5rem;
}

/* About Us page */

section .socials {
    text-align: center;
    display: block;
}

@media (min-width: 1024px) {
    section .social-icons {
        display: flex;
        justify-content: space-evenly;
    }

    section .social-icons>div {
        width: 30%;
    }
}

section .socials img {
    margin: 1rem;
    width: 3rem;
}

/* Post */

.post-authors {
    border-bottom: groove;
    border-bottom-width: thin;
}

.post-author {
    display: flex;
    align-items: center;
    font-size: 0.8rem;
}

@media (max-width: 1024px) {
    .post-author {
        font-size: 0.7rem;
    }
}

.post-author>div {
    padding: 0.3rem;
}

.post-header h1 {
    text-align: center;
}

.error {
    color: var(--error-primary-color);
}

